Fix ConsumerCheckPoint implementation and test issues (#43)